--- a/whiteboard.ipynb
+++ b/whiteboard.ipynb
@@ -9,10 +9,7 @@
    "source": [
     "'''\n",
     "    A simple drawing program to experiment with GUI builder module\n",
-    "    Tkinter.\n",
-    "\n",
-    "    Author: Becky Croteau\n",
-    "    Date: July 31, 2017\n",
+    "    Tkinter.\n"
     "'''\n",
     "import tkinter as tk\n",
     "\n",
